--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -27,8 +27,8 @@
         <ion-item nav-clear menu-close href="#/app/browse">
           Browse
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/playlists">
-          Playlists
+        <ion-item nav-clear menu-close ui-sref="app.eventos">
+          Eventos
         </ion-item>
       </ion-list>
     </ion-content>
