Prueba de enrutado de secciones

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,16 +19,16 @@
     <ion-content>
       <ion-list>
         <ion-item nav-clear menu-close ng-click="login()">
-          Login
+          Lallaa
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/search">
-          Search
+          Danza
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
-          Browse
+        <ion-item nav-clear menu-close ui-sref="app.teatro">
+          Teatro
         </ion-item>
-        <ion-item nav-clear menu-close ui-sref="app.eventos">
-          Eventos
+        <ion-item nav-clear menu-close ui-sref="app.musica">
+          Musica
         </ion-item>
       </ion-list>
     </ion-content>
