Refactorizamos controllers en uno solo de eventos

--- a/www/templates/eventos.html
+++ b/www/templates/eventos.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Eventos">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="evento in eventos" href="#/app/eventos/{{evento.id}}">
+      <ion-item ng-repeat="evento in eventos" href="#/app/evento/{{evento.id}}">
         {{evento.title}}
       </ion-item>
     </ion-list>
