--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,10 +24,10 @@
         <ion-item nav-clear menu-close href="#/app/search">
           Danza
         </ion-item>
-        <ion-item nav-clear menu-close ui-sref="app.teatro">
+        <ion-item nav-clear menu-close href="#/app/eventos/teatro">
           Teatro
         </ion-item>
-        <ion-item nav-clear menu-close ui-sref="app.musica">
+        <ion-item nav-clear menu-close href="#/app/eventos/musica">
           Musica
         </ion-item>
       </ion-list>
