Añade el resto del menú con sus términos de búsqueda

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,17 +18,26 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close ng-click="login()">
-          Lallaa
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/search">
-          Danza
-        </ion-item>
         <ion-item nav-clear menu-close href="#/app/eventos/teatro">
           Teatro
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/eventos/musica">
           Musica
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/eventos/exposiciones%20y%20museos">
+          Exposiciones y Museos
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/eventos/gastronomia">
+          Gastronomía
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/eventos/danzas%20Bailes">
+          Danzas y Bailes
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/eventos/medio%20ambiente">
+          Medio Ambiente
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/eventos/deportes">
+          Deportes
         </ion-item>
       </ion-list>
     </ion-content>
