--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -39,6 +39,9 @@
         <ion-item nav-clear menu-close href="#/app/eventos/deportes">
           Deportes
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/infantil">
+          Infantil
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
