--- a/www/templates/evento.html
+++ b/www/templates/evento.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Playlist">
   <ion-content>
-    <h1>Evento</h1>
+    <h1>{{evento.title}}</h1>
   </ion-content>
 </ion-view>
