Añade vista de card para el detalle de evento

--- a/www/templates/evento.html
+++ b/www/templates/evento.html
@@ -1,5 +1,37 @@
 <ion-view view-title="Playlist">
   <ion-content>
-    <h1>{{evento.title}}</h1>
+    <div class="list card">
+
+      <div class="item item-avatar">
+        <img src="{{evento.imagen_s}}">
+        <h2>{{evento.title}}</h2>
+        <p>{{evento.fechaInicio_dt}} {{evento.fechaFinal_dt}}</p>
+      </div>
+
+      <div class="item item-body">
+        <img class="evimage" src="{{evento.imagen_s}}">
+        <pre class="evpre">{{evento.description}}</pre>
+        <p>
+          <a href="#" class="subdued">1 Like</a>
+          <a href="#" class="subdued">5 Comments</a>
+        </p>
+      </div>
+
+      <div class="item tabs tabs-secondary tabs-icon-left">
+        <a class="tab-item" href="#">
+          <i class="icon ion-thumbsup"></i>
+          Like
+        </a>
+        <a class="tab-item" href="#">
+          <i class="icon ion-chatbox"></i>
+          Comment
+        </a>
+        <a class="tab-item" href="#">
+          <i class="icon ion-share"></i>
+          Share
+        </a>
+      </div>
+
+    </div>
   </ion-content>
 </ion-view>
