--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,16 @@
 /* Empty. Add your own CSS if you like */
+.evimage {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block; }
+.evpre {
+	color: #666;
+  font-size: 14px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+    padding: 0;
+  border: 0;
+  vertical-align: baseline;
+  font-family: "Helvetica Neue", "Roboto", sans-serif;
+}
