Mejora la vista de detalle de evento si la imagen adjuntada es diminuta

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,7 @@
 /* Empty. Add your own CSS if you like */
 .evimage {
-  width: 100%;
+  max-width: 100%;
+  min-width: 50%;
   margin-left: auto;
   margin-right: auto;
   display: block; }
