--- a/www/templates/eventos.html
+++ b/www/templates/eventos.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Eventos">
+<ion-view view-title="La Agendica">
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="evento in eventos" href="#/app/evento/{{$index}}">
