--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,6 +18,9 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
+        <ion-item nav-clear menu-close href="#/app/destacados">
+          Destacados
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/eventos/teatro">
           Teatro
         </ion-item>
