--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -42,6 +42,9 @@
         <ion-item nav-clear menu-close href="#/app/infantil">
           Infantil
         </ion-item>
+        <ion-item nav-clear menu-close ui-sref="app.favoritos">
+          Favoritos
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
