--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -18,9 +18,9 @@
       </div>
 
       <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" href="#">
-          <i class="icon ion-thumbsup"></i>
-          Like
+        <a class="tab-item" ng-click="marcarFavorito({{evento}})" >
+            <i class="icon ion-ios-star-outline"></i>
+            Favorito
         </a>
         <a class="tab-item" href="#">
           <i class="icon ion-chatbox"></i>
