Primera carga de mapa con datos dummy

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -48,6 +48,9 @@
         <ion-item nav-clear menu-close ui-sref="app.favoritos">
           Favoritos
         </ion-item>
+        <ion-item nav-clear menu-close ui-sref="app.map">
+          Mapa de Favoritos
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
