--- a/www/css/style.css
+++ b/www/css/style.css
@@ -15,3 +15,10 @@
   vertical-align: baseline;
   font-family: "Helvetica Neue", "Roboto", sans-serif;
 }
+#map {
+  width: 100%;
+  height: 100%;
+}
+.scroll {
+  height: 100%;
+}
