Quita Comentar harcodeado

--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -19,12 +19,8 @@
             Favorito
         </a>
         <a class="tab-item" href="#">
-          <i class="icon ion-chatbox"></i>
-          Comment
-        </a>
-        <a class="tab-item" href="#">
           <i class="icon ion-share"></i>
-          Share
+          Compartir
         </a>
       </div>
 
