--- a/www/templates/evento.html
+++ b/www/templates/evento.html
@@ -16,15 +16,11 @@
       <div class="item tabs tabs-secondary tabs-icon-left">
         <a class="tab-item" ng-click="marcarFavorito({{evento}})" >
             <i class="icon ion-ios-star-outline"></i>
-            Favorito
-        </a>
-        <a class="tab-item" href="#">
-          <i class="icon ion-chatbox"></i>
-          Comment
+            Marcar Favorito
         </a>
         <a class="tab-item" href="#">
           <i class="icon ion-share"></i>
-          Share
+          Compartir
         </a>
       </div>
 
