Iconos del menu

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,37 +18,48 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close ui-sref="app.favoritos">
+        <ion-item nav-clear menu-close ui-sref="app.favoritos" class="item item-icon-left">
+          <i class="icon ion-star"></i>
           Favoritos
         </ion-item>
-        <ion-item nav-clear menu-close ui-sref="app.map">
+        <ion-item nav-clear menu-close ui-sref="app.map" class="item item-icon-left">
+          <i class="icon ion-map"></i>
           Mapa de Favoritos
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/destacados">
+        <ion-item nav-clear menu-close href="#/app/destacados" class="item item-icon-left">
+          <i class="icon ion-arrow-graph-up-right"></i>
           Destacados
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/eventos/teatro">
+        <ion-item nav-clear menu-close href="#/app/eventos/teatro" class="item item-icon-left">
+          <i class="icon ion-chatbubbles"></i>
           Teatro
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/eventos/musica">
+        <ion-item nav-clear menu-close href="#/app/eventos/musica"  class="item item-icon-left">
+          <i class="icon ion-music-note"></i>
           Musica
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/eventos/exposiciones%20y%20museos">
+        <ion-item nav-clear menu-close href="#/app/eventos/exposiciones%20y%20museos" class="item item-icon-left">
+          <i class="icon ion-paintbrush"></i>
           Exposiciones y Museos
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/eventos/gastronomia">
+        <ion-item nav-clear menu-close href="#/app/eventos/gastronomia" class="item item-icon-left">
+          <i class="icon ion-pizza"></i>
           Gastronomía
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/eventos/danzas%20Bailes">
+        <ion-item nav-clear menu-close href="#/app/eventos/danzas%20Bailes" class="item item-icon-left">
+          <i class="icon ion-android-walk"></i>
           Danzas y Bailes
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/eventos/medio%20ambiente">
+        <ion-item nav-clear menu-close href="#/app/eventos/medio%20ambiente" class="item item-icon-left">
+          <i class="icon ion-leaf"></i>
           Medio Ambiente
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/eventos/deportes">
+        <ion-item nav-clear menu-close href="#/app/eventos/deportes" class="item item-icon-left">
+          <i class="icon ion-ios-basketball"></i>
           Deportes
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/infantil">
+        <ion-item nav-clear menu-close href="#/app/infantil" class="item item-icon-left">
+          <i class="icon ion-happy-outline"></i>
           Infantil
         </ion-item>
       </ion-list>
