--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-calm">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -13,7 +13,7 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left" expose-aside-when="large">
-    <ion-header-bar class="bar-stable">
+    <ion-header-bar class="bar-positive">
       <h1 class="title">Temas</h1>
     </ion-header-bar>
     <ion-content>
