--- a/www/css/style.css
+++ b/www/css/style.css
@@ -15,6 +15,10 @@
   vertical-align: baseline;
   font-family: "Helvetica Neue", "Roboto", sans-serif;
 }
+.item-thumbnail-left .item-content{
+  padding-top: 26px;
+  padding-right: 39px;
+}
 #map {
   width: 100%;
   height: 100%;
