--- a/www/templates/destacados.html
+++ b/www/templates/destacados.html
@@ -1,8 +1,10 @@
 <ion-view view-title="Destacados de La Agendica">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="evento in eventos" href="#/app/destacado/{{$index}}">
-        {{evento.title.value}}
+      <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos" href="#/app/destacado/{{$index}}">
+        <img src="{{evento.image.value}}">
+        <h2>{{evento.title.value}}</h2>
+        <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
       </ion-item>
     </ion-list>
   </ion-content>
