Pantalla del equipo

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -62,6 +62,17 @@
           <i class="icon ion-happy-outline"></i>
           Infantil
         </ion-item>
+        <div class="item item-divider">
+            <!-- Información -->
+          </div>
+        <ion-item nav-clear menu-close href="#/app/team" class="item item-icon-left" >
+          <i class="icon ion-hammer"></i>
+          Equipo de Desarollo
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/team" class="item item-icon-left" >
+          <i class="icon ion-information-circled"></i>
+         Acerca de
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
