--- a/www/templates/eventos.html
+++ b/www/templates/eventos.html
@@ -1,9 +1,14 @@
 <ion-view view-title="La Agendica - {{eventos.nav}}">
   <ion-content>
-    <ion-list>
+    <ion-list ng-show="mostrarEventos">
       <ion-item ng-repeat="evento in eventos" href="#/app/evento/{{$index}}">
         {{evento.title}}
       </ion-item>
     </ion-list>
+    <div class="card" ng-hide="mostrarEventos">
+      <div class="item item-text-wrap" style="text-align:center">
+        <i class="icon ion-sad-outline"></i> {{textoNoContent}} <i class="icon ion-sad-outline"></i>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
