Adorna mensajes de falta de elementos

--- a/www/templates/eventos.html
+++ b/www/templates/eventos.html
@@ -6,9 +6,10 @@
       </ion-item>
     </ion-list>
     <div class="card" ng-hide="mostrarEventos">
-      <div class="item item-text-wrap" style="text-align:center">
-        <i class="icon ion-sad-outline"></i> {{textoNoContent}} <i class="icon ion-sad-outline"></i>
-      </div>
+      <a class="item item-icon-left item-text-wrap">
+        <i class="icon ion-android-sad"></i>
+        {{textoNoContent}}
+      </a>
     </div>
   </ion-content>
 </ion-view>
