Layout de la pantalla de About. Falta rellenar con contenido

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -72,7 +72,7 @@
           <i class="icon ion-hammer"></i>
           Equipo de Desarollo
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/team" class="item item-icon-left" >
+        <ion-item nav-clear menu-close href="#/app/about" class="item item-icon-left" >
           <i class="icon ion-information-circled"></i>
          Acerca de
         </ion-item>
