Compartir en Twitter

--- a/www/templates/evento.html
+++ b/www/templates/evento.html
@@ -18,9 +18,9 @@
             <i class="icon ion-ios-star-outline"></i>
             Marcar Favorito
         </a>
-        <a class="tab-item" href="#">
+        <a class="tab-item" href="https://twitter.com/intent/tweet?text=Echa un vistazo a este evento que encontré en @LaAgendica {{evento.uri}}&hashtags=Zaragoza,LaAgendica">
           <i class="icon ion-share"></i>
-          Compartir
+          Twittear
         </a>
       </div>
 
