Muestra mensaje si no hay favoritos y queremos navegar al mapa

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -26,7 +26,7 @@
           <i class="icon ion-star"></i>
           Favoritos
         </ion-item>
-        <ion-item nav-clear menu-close ui-sref="app.map" class="item item-icon-left positive">
+        <ion-item nav-clear menu-close ng-click="openMap()" class="item item-icon-left positive">
           <i class="icon ion-map"></i>
           Mapa de Favoritos
         </ion-item>
