--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -15,12 +15,12 @@
 
       <div class="item tabs tabs-secondary tabs-icon-left">
         <a class="tab-item" ng-click="marcarFavorito({{evento}})" >
-            <i class="icon ion-ios-star-outline"></i>
-            Favorito
+          <i class="icon ion-ios-star-outline"></i>
+            Marcar Favorito
         </a>
-        <a class="tab-item" href="#">
+        <a class="tab-item" href="https://twitter.com/intent/tweet?text=Echa un vistazo a este evento que encontré en @LaAgendica {{evento.uri.value}}&hashtags=Zaragoza,LaAgendica">
           <i class="icon ion-share"></i>
-          Compartir
+          Twittear
         </a>
       </div>
 
