No cortar los títulos de los eventos

--- a/www/templates/evento.html
+++ b/www/templates/evento.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="list card">
 
-      <div class="item item-avatar">
+      <div class="item item-avatar item-text-wrap">
         <img src="{{evento.imagen_s}}">
         <h2>{{evento.title}}</h2>
         <p>Del {{evento.fechaInicio_dt | date:'dd-MMM-yy'}} al {{evento.fechaFinal_dt | date:'dd-MMM-yy'}}</p>
