--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="list card">
 
-      <div class="item item-avatar">
+      <div class="item item-avatar item-text-wrap">
         <img src="{{evento.image.value}}">
         <h2>{{evento.title.value}}</h2>
         <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
