--- a/www/templates/eventos.html
+++ b/www/templates/eventos.html
@@ -1,7 +1,7 @@
 <ion-view view-title="La Agendica - {{eventos.nav}}">
   <ion-content>
     <ion-list ng-show="mostrarEventos">
-      <ion-item ng-repeat="evento in eventos" href="#/app/evento/{{$index}}">
+      <ion-item class="item-text-wrap" ng-repeat="evento in eventos" href="#/app/evento/{{$index}}">
         {{evento.title}}
       </ion-item>
     </ion-list>
