Pone icono de la sección destacados como avatar del card de detalle

--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -2,8 +2,8 @@
   <ion-content>
     <div class="list card">
 
-      <div class="item item-avatar item-text-wrap">
-        <img src="{{evento.image.value}}">
+      <div class="item item-avatar item-text-wrap item-icon-left assertive">
+        <i class="icon ion-arrow-graph-up-right"></i>
         <h2>{{evento.title.value}}</h2>
         <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
       </div>
