--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -4,9 +4,21 @@
 
             <div class="item item-body">
               <img class="evimage" src="http://www.z4s.es/wp-content/uploads/2015/03/slidehackathon.jpg"> 
-              <pre class="evpre">Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id. Quo mundi lobortis reformidans eu, legimus senserit definiebas an eos. Eu sit tincidunt incorrupte definitionem, vis mutat affert percipit cu, eirmod consectetuer signiferumque eu per. In usu latine equidem dolores. Quo no falli viris intellegam, ut fugit veritus placerat per.
-Ius id vidit volumus mandamus, vide veritus democritum te nec, ei eos debet libris consulatu. No mei ferri graeco dicunt, ad cum veri accommodare. Sed at malis omnesque delicata, usu et iusto zzril meliore. Dicunt maiorum eloquentiam cum cu, sit summo dolor essent te. Ne quodsi nusquam legendos has, ea dicit voluptua eloquentiam pro, ad sit quas qualisque. Eos vocibus deserunt quaestio ei.
-Blandit incorrupte quaerendum in quo, nibh impedit id vis, vel no nullam semper audiam. Ei populo graeci consulatu mei, has ea stet modus phaedrum. Inani oblique ne has, duo et veritus detraxit. Tota ludus oratio ea mel, offendit persequeris ei vim. Eos dicat oratio partem ut, id cum ignota senserit intellegat. Sit inani ubique graecis ad, quando graecis liberavisse et cum, dicit option eruditi at duo. Homero salutatus suscipiantur eum id, tamquam voluptaria expetendis ad sed, nobis feugiat similique usu ex.</pre>
+              <pre class="evpre">
+App desarrollada durante el hackaton ZaragozaAppStore (21-22 de marzo, en el edificio Etopia, Zaragoza).
+
+Muestra los eventos de la ciudad en la próxima semana, organizados por categorías en un menú lateral. Permite añadir eventos a favoritos, así como ver los eventos destacados por el Ayuntamiento de Zaragoza, tanto en modo lista como mapa.
+
+Utiliza las APIs Open Data del Ayuntamiento de Zaragoza, en concreto:
+    <ul>
+        <li>endpoint SPARQL: <a href="http://datos.zaragoza.es/sparql">http://datos.zaragoza.es/sparql</a></li>
+        <li>endpoint SOLR: <a href="http://www.zaragoza.es/buscador/select">http://www.zaragoza.es/buscador/select</a></li>
+    </ul>
+              </pre>
+              <a style="center" class="tab-item item-text-wrap" href="https://github.com/jrub/LaAgendica" target="_blank">
+                  <i class="icon ion-social-octocat"></i>
+                  Ver código fuente en Github
+                </a>
             </div>
         </div>
   </ion-content>
