Acerca De definitivo, con links para compartir y seguirnos en twitter

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,25 +1,35 @@
 <ion-view view-title="La Agendica - Acerca de">
   <ion-content>
-      <div class="list card">
-
+        <div class="list card">
             <div class="item item-body">
-              <img class="evimage" src="http://www.z4s.es/wp-content/uploads/2015/03/slidehackathon.jpg"> 
-              <pre class="evpre">
-App desarrollada durante el hackaton ZaragozaAppStore (21-22 de marzo, en el edificio Etopia, Zaragoza).
+                <img class="evimage" src="http://www.z4s.es/wp-content/uploads/2015/03/slidehackathon.jpg"> 
+                <pre class="evpre nobottom">
+App desarrollada durante el hackaton <a href="http://www.z4s.es/">ZgzAppStore</a> (21-22 de marzo, en el edificio Etopia, Zaragoza).
 
-Muestra los eventos de la ciudad en la próxima semana, organizados por categorías en un menú lateral. Permite añadir eventos a favoritos, así como ver los eventos destacados por el Ayuntamiento de Zaragoza, tanto en modo lista como mapa.
+Muestra los eventos de la ciudad <b>de la próxima semana</b>, utilizando los servicios Open Data del Ayuntamiento de Zaragoza (+ info en: <a href="http://datosabiertos.zaragoza.es">datosabiertos.zaragoza.es</a>)
 
-Utiliza las APIs Open Data del Ayuntamiento de Zaragoza, en concreto:
-    <ul>
-        <li>endpoint SPARQL: <a href="http://datos.zaragoza.es/sparql">http://datos.zaragoza.es/sparql</a></li>
-        <li>endpoint SOLR: <a href="http://www.zaragoza.es/buscador/select">http://www.zaragoza.es/buscador/select</a></li>
-    </ul>
-              </pre>
-              <a style="center" class="tab-item item-text-wrap" href="https://github.com/jrub/LaAgendica" target="_blank">
-                  <i class="icon ion-social-octocat"></i>
-                  Ver código fuente en Github
-                </a>
+La exactitud de los datos depende del Ayuntamiento, para consultas relativas a ellos contacte con webmunicipal@zaragoza.es
+
+Para cualquier otra consulta, propuesta o reporte de errores puede escribir a info@laagendica.com
+
+La App es Open Source, y la mantenemos en nuestro tiempo libre ¿Nos ayudas a difundirla?
+                </pre>
             </div>
+                <div class="item tabs tabs-icon-bottom">
+                    <a class="tab-item item-text-wrap" href="https://twitter.com/intent/tweet?text=¿Aún no conoces @LaAgendica? ¡Todos los eventos de la ciudad en la palma de tu mano, co! www.laAgendica.com&hashtags=Zaragoza,LaAgendica" target="_blank">
+                        <i class="icon ion-share"></i>
+                      Difunde en Twitter
+                    </a>
+                    <a class="tab-item item-text-wrap" href="https://github.com/jrub/LaAgendica" target="_blank">
+                        <i class="icon ion-social-octocat"></i>
+                      Ver código fuente
+                    </a>
+                    <a class="tab-item item-text-wrap" href="https://twitter.com/intent/follow?screen_name=LaAgendica&lang=es" target="_blank">
+                        <i class="icon ion-social-twitter"></i>
+                      Síguenos en Twitter
+                    </a>
+              </div>
+
         </div>
   </ion-content>
 </ion-view>
