--- a/www/css/style.css
+++ b/www/css/style.css
@@ -15,6 +15,9 @@
   vertical-align: baseline;
   font-family: "Helvetica Neue", "Roboto", sans-serif;
 }
+.nobottom{
+  margin-bottom: -10px;
+}
 .item-thumbnail-left .item-content{
   padding-top: 26px;
   padding-right: 20px;
