Mejora los textos de About y equipo

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -8,15 +8,15 @@ App desarrollada durante el hackaton <a href="http://www.z4s.es/">ZgzAppStore</a
 
 Muestra los eventos de la ciudad <b>de la próxima semana</b>, utilizando los servicios Open Data del Ayuntamiento de Zaragoza (+ info en: <a href="http://datosabiertos.zaragoza.es">datosabiertos.zaragoza.es</a>)
 
-La exactitud de los datos depende del Ayuntamiento, para consultas relativas a ellos contacte con webmunicipal@zaragoza.es
-
-Para cualquier otra consulta, propuesta o reporte de errores puede escribir a info@laagendica.com
+La exactitud de los datos depende del Ayuntamiento, para consultas relativas a ellos contacte con <a href="mailto:webmunicipal@zaragoza.es">webmunicipal@zaragoza.es</a> o bien el teléfono 010.
+Para cualquier otra consulta o propuesta sobre la aplicación, puede escribir a <a href="mailto:info@laagendica.com">info@laAgendica.com</a>
+Para reporte de errores concretos es preferible <a href="https://github.com/jrub/LaAgendica/issues">abrir un "issue"</a> en Github si nadie ha especificado ya ese problema.
 
 La App es Open Source, y la mantenemos en nuestro tiempo libre ¿Nos ayudas a difundirla?
                 </pre>
             </div>
                 <div class="item tabs tabs-icon-bottom">
-                    <a class="tab-item item-text-wrap" href="https://twitter.com/intent/tweet?text=¿Aún no conoces @LaAgendica? ¡Todos los eventos de la ciudad en la palma de tu mano, co! www.laAgendica.com&hashtags=Zaragoza,LaAgendica" target="_blank">
+                    <a class="tab-item item-text-wrap" href="https://twitter.com/intent/tweet?text=¿Aún no conoces @LaAgendica? ¡Todos los eventos de la ciudad en la palma de tu mano! www.laAgendica.com&hashtags=Zaragoza,LaAgendica" target="_blank">
                         <i class="icon ion-share"></i>
                       Difunde en Twitter
                     </a>
