gestion de borrado y guardado de favs

--- a/www/templates/evento.html
+++ b/www/templates/evento.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" ng-click="marcarFavorito({{evento}})" >
+        <a class="tab-item" ng-click="gestionarFavorito({{evento}})" >
             <i class="icon ion-ios-star-outline"></i>
             Marcar Favorito
         </a>
