Corregido typo en menú

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -70,7 +70,7 @@
         </div>
         <ion-item nav-clear menu-close href="#/app/team" class="item item-icon-left" >
           <i class="icon ion-hammer"></i>
-          Equipo de Desarollo
+          Equipo de Desarrollo
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/about" class="item item-icon-left" >
           <i class="icon ion-information-circled"></i>
