Cambia títulos Favoritos y Mapa Favoritos

--- a/www/templates/favoritos.html
+++ b/www/templates/favoritos.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Favoritos de La Agendica">
+<ion-view view-title="Tus Favoritos en La Agendica">
   <ion-content>
     <ion-list ng-show="mostrarEventos">
       <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos" href="#/app/evento/{{$index}}">
