--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Mapa">
+<ion-view view-title="Mapa de tus Favoritos">
   <ion-content>
     <div id="map" data-tap-disabled="true"></div>
   </ion-content>
