--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -14,8 +14,8 @@
       </div>
 
       <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" ng-class="{energized: evento.fav}" ng-click="gestionarFavorito({{evento}})" >
-          <i class="icon ion-ios-star-outline"></i>
+        <a class="tab-item" ng-click="gestionarFavorito({{evento}})" >
+          <i class="icon ion-star" ng-class="{energized: evento.fav}"></i>
             Favorito
         </a>
         <a class="tab-item" href="https://twitter.com/intent/tweet?text=Echa un vistazo a este evento que encontré en @LaAgendica {{evento.uri.value}}&hashtags=Zaragoza,LaAgendica">
