Añade mapa del recorrido de la procesión

--- a/www/templates/semsanta-dia.html
+++ b/www/templates/semsanta-dia.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" >
+        <a class="tab-item" ng-click="goMap(procesion)">
             <i class="icon ion-map"></i>
             Abrir mapa
         </a>
