Compartir día santo en twitter

--- a/www/templates/semsanta-dia.html
+++ b/www/templates/semsanta-dia.html
@@ -18,7 +18,7 @@
             <i class="icon ion-map"></i>
             Abrir mapa
         </a>
-        <a class="tab-item" href="https://twitter.com/intent/tweet?text=Echa un vistazo a este evento que encontré en @LaAgendica {{evento.uri}}&hashtags=Zaragoza,LaAgendica">
+        <a class="tab-item" href="https://twitter.com/intent/tweet?text=Procesiones del {{diasanto}} en @LaAgendica&url={{url}}&hashtags=Zaragoza,SemanaSanta,LaAgendica">
           <i class="icon ion-share"></i>
           Twittear
         </a>
