Permite abrir la web de zaragoza.es asociada al evento

--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -22,6 +22,10 @@
           <i class="icon ion-share"></i>
           Twittear
         </a>
+        <a class="tab-item" href="{{evento.uri.value}}">
+          <i class="icon ion-share"></i>
+          Ver Web
+        </a>
       </div>
 
     </div>
