Cambia icono par acompartir en twitter

--- a/www/templates/evento.html
+++ b/www/templates/evento.html
@@ -19,7 +19,7 @@
             Favorito
         </a>
         <a class="tab-item" href="https://twitter.com/intent/tweet?text=Echa un vistazo a este evento que encontré en @LaAgendica {{evento.uri}}&hashtags=Zaragoza,LaAgendica">
-          <i class="icon ion-share"></i>
+          <i class="icon ion-social-twitter"></i>
           Twittear
         </a>
         <a class="tab-item" href="{{evento.uri}}">
