Mejora visualizado de falta de favoritos o eventos

--- a/www/templates/eventos.html
+++ b/www/templates/eventos.html
@@ -5,8 +5,8 @@
         {{evento.title}}
       </ion-item>
     </ion-list>
-    <div class="card" ng-hide="mostrarEventos">
-      <a class="item item-icon-left item-text-wrap">
+    <div class="list card" ng-hide="mostrarEventos" style="text-align:center">
+      <a href="#" class="item item-icon-left item-text-wrap">
         <i class="icon ion-android-sad"></i>
         {{textoNoContent}}
       </a>
