--- a/www/templates/destacados.html
+++ b/www/templates/destacados.html
@@ -7,10 +7,11 @@
         <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
       </ion-item>
     </ion-list>
-    <div class="card" ng-hide="mostrarEventos">
-      <div class="item item-text-wrap" style="text-align:center">
-        <i class="icon ion-sad-outline"></i> {{textoNoContent}} <i class="icon ion-sad-outline"></i>
-      </div>
+    <div class="list card" ng-hide="mostrarEventos" style="text-align:center">
+      <a href="#" class="item item-icon-left item-text-wrap">
+        <i class="icon ion-android-sad"></i>
+        {{textoNoContent}}
+      </a>
     </div>
   </ion-content>
 </ion-view>
