--- a/www/templates/destacados.html
+++ b/www/templates/destacados.html
@@ -1,13 +1,13 @@
 <ion-view view-title="Destacados de La Agendica">
   <ion-content>
-    <ion-list ng-show="mostrarEventos">
+    <ion-list ng-show="hayEventos">
       <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos" href="#/app/destacado/{{$index}}">
         <img src="{{evento.image.value}}">
         <h2>{{evento.title.value}}</h2>
         <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
       </ion-item>
     </ion-list>
-    <div class="list card" ng-hide="mostrarEventos" style="text-align:center">
+    <div class="list card" ng-hide="hayEventos" style="text-align:center">
       <a href="#" class="item item-icon-left item-text-wrap">
         <i class="icon ion-android-sad"></i>
         {{textoNoContent}}
