--- a/www/templates/eventos.html
+++ b/www/templates/eventos.html
@@ -1,11 +1,11 @@
 <ion-view view-title="La Agendica - {{eventos.nav}}">
   <ion-content>
-    <ion-list ng-show="mostrarEventos">
+    <ion-list ng-show="hayEventos">
       <ion-item class="item-text-wrap" ng-repeat="evento in eventos" href="#/app/evento/{{$index}}">
         {{evento.title}}
       </ion-item>
     </ion-list>
-    <div class="list card" ng-hide="mostrarEventos" style="text-align:center">
+    <div class="list card" ng-hide="hayEventos" style="text-align:center">
       <a href="#" class="item item-icon-left item-text-wrap">
         <i class="icon ion-android-sad"></i>
         {{textoNoContent}}
