Abrir web Zgz en otra pestaña

--- a/www/templates/evento.html
+++ b/www/templates/evento.html
@@ -22,7 +22,7 @@
           <i class="icon ion-social-twitter"></i>
           Twittear
         </a>
-        <a class="tab-item" href="{{evento.uri}}">
+        <a class="tab-item" href="{{evento.uri}}" target="_blank">
           <i class="icon ion-share"></i>
           Ver Web
         </a>
