--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -22,7 +22,7 @@
           <i class="icon ion-social-twitter"></i>
           Twittear
         </a>
-        <a class="tab-item" href="{{evento.uri.value}}">
+        <a class="tab-item" href="{{evento.uri.value}}" target="_blank">
           <i class="icon ion-share"></i>
           Ver Web
         </a>
