Arregla la URI que viene con el API SPARQL

--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -22,7 +22,7 @@
           <i class="icon ion-social-twitter"></i>
           Twittear
         </a>
-        <a class="tab-item" href="{{evento.uri.value}}" target="_blank">
+        <a class="tab-item" href='{{evento.uri.value.replace("http://www.zaragoza.es/api/recurso/cultura-ocio/evento-zaragoza/", "http://www.zaragoza.es/ciudad/actividades/ficha_Agenda?codigo=")}}' target="_blank">
           <i class="icon ion-share"></i>
           Ver Web
         </a>
