Añade sección de Tecnología

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -37,6 +37,10 @@
         <div class="item item-divider">
             <!-- Información -->
         </div>
+        <ion-item nav-clear menu-close href="#/app/eventos/tecnologia" class="item item-icon-left">
+          <i class="icon ion-ios-at"></i>
+          Tecnología
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/eventos/teatro" class="item item-icon-left">
           <i class="icon ion-chatbubbles"></i>
           Teatro
