Reorganiza las secciones

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -37,9 +37,17 @@
         <div class="item item-divider">
             <!-- Información -->
         </div>
+        <ion-item nav-clear menu-close href="#/app/eventos/exposiciones%20y%20museos" class="item item-icon-left">
+          <i class="icon ion-paintbrush"></i>
+          Exposiciones y Museos
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/eventos/tecnologia" class="item item-icon-left">
           <i class="icon ion-ios-at"></i>
           Tecnología
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/infantil" class="item item-icon-left">
+          <i class="icon ion-happy-outline"></i>
+          Infantil
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/eventos/teatro" class="item item-icon-left">
           <i class="icon ion-chatbubbles"></i>
@@ -47,11 +55,7 @@
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/eventos/musica"  class="item item-icon-left">
           <i class="icon ion-music-note"></i>
-          Musica
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/eventos/exposiciones%20y%20museos" class="item item-icon-left">
-          <i class="icon ion-paintbrush"></i>
-          Exposiciones y Museos
+          Música
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/eventos/gastronomia" class="item item-icon-left">
           <i class="icon ion-pizza"></i>
@@ -68,10 +72,6 @@
         <ion-item nav-clear menu-close href="#/app/eventos/deportes" class="item item-icon-left">
           <i class="icon ion-ios-basketball"></i>
           Deportes
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/infantil" class="item item-icon-left">
-          <i class="icon ion-happy-outline"></i>
-          Infantil
         </ion-item>
         <div class="item item-divider">
             <!-- Información -->
