[PoC] Api Pilares Service

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,6 +18,10 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
+        <ion-item nav-clear menu-close href="#/app/pilares" class="item item-icon-left royal">
+          <i class="icon ion-social-freebsd-devil"></i>
+          Pilares 2015
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/destacados" class="item item-icon-left assertive">
           <i class="icon ion-arrow-graph-up-right"></i>
           Destacados
