--- a/www/templates/pilares-dia.html
+++ b/www/templates/pilares-dia.html
@@ -1,10 +1,10 @@
 <ion-view view-title="{{diaPilar}}">
   <ion-content>
     <ion-list>
-      <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos | filter:{startDate:dias[diaPilar]}" href="#/app/pilares/{{$index}}">
-        <img src="{{evento.image}}">
-        <h2>{{evento.title}}</h2>
-        <p>Del {{evento.startDate | date:'dd-MMM-yy'}} al {{evento.endDate | date:'dd-MMM-yy'}}</p>
+      <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos" href="#/app/pilares/{{$index}}">
+        <img src="{{evento.image.value}}">
+        <h2>{{evento.title.value}}</h2>
+        <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
       </ion-item>
     </ion-list>
   </ion-content>
