--- a/www/templates/pilares-dia.html
+++ b/www/templates/pilares-dia.html
@@ -1,10 +1,12 @@
 <ion-view view-title="{{diaPilar}}">
   <ion-content>
     <ion-list>
-      <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos" href="#/app/pilares/{{$index}}">
+      <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos | orderBy : 'startTime.value'" href="#/app/pilares/{{$index}}">
         <img src="{{evento.image.value}}">
         <h2>{{evento.title.value}}</h2>
         <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
+        <p ng-show="evento.startTime.value">{{evento.startTime.value}} <span ng-show="evento.endTime.value">a</span> {{evento.endTime.value}}</p>
+        <p ng-hide="evento.startTime.value">Múltiples horarios</p>
       </ion-item>
     </ion-list>
   </ion-content>
