--- a/www/templates/pilares-dia.html
+++ b/www/templates/pilares-dia.html
@@ -1,7 +1,7 @@
 <ion-view view-title="{{diaPilar}}">
   <ion-content>
     <ion-list>
-      <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos | orderBy : 'startTime.value'" href="#/app/pilares/{{$index}}">
+      <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos | orderBy : 'startTime.value'" href="#/app/pilares/{{diaPilar}}/{{evento.id.value}}">
         <img src="{{evento.image.value}}">
         <h2>{{evento.title.value}}</h2>
         <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
