--- a/www/templates/pilares-evento.html
+++ b/www/templates/pilares-evento.html
@@ -9,7 +9,7 @@
       </div>
 
       <div class="item item-body">
-        <img class="evimage" src="{{evento.image.value}}">
+        <img class="evimage" ng-src="{{evento.image !== undefined ? 'http:' + evento.image.value : 'https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/icon.png'}}">
         <div class="evpre" ng-bind-html="evento.description.value"></div>
         <p>Horario: </p><div class="evpre" ng-bind-html="evento.horario.value"></div>
       </div>
