Añade 'http:' correctamente a las imgs del server q no lo llevan
- Podría concatenarse con la petición del SPARQL, como en el service de APISparql, pero entonces vienen evento.image.value con 'http:' para los q no tienen imagen
- se añade un estilo porque el de la lista sólo aplica al primer img hijo de la lista

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -38,3 +38,11 @@
 .angular-leaflet-map {
     height: 100%;
 }
+.list-thumb {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    max-width: 80px;
+    max-height: 80px;
+    width: 100%;
+    height: 100%; }
